tests/reference/asr-array_02-f2b519f.stderr
semantic error: Empty array constructor is not allowed
 --> tests/errors/array_02.f90:4:12
  |
4 | print *, [[[], [[]]], [[]], []]
  |            ^^ 
